Oct 11, 2022
  CurationDafGenerator - KANBAN-193 - 'asserted_gene' populated for disease_allele_ingest_set
                         corresponding disease gene annotations removed from disease_gene_ingest_set

Sep 19, 2022
  CurationDafGenerator - KANBAN-219 - Update 'creation_date', ‘data_last_modified’ and ‘modified_by’
    to ‘date_created', 'date_updated’ and ‘updated_by' in RGD and HUMAN disease annotation submissions
  CurationDafGenerator - KANBAN-212: reviewed XCO to ZECO mappings

May 17, 2022
  added CurationAlleleGenerator

May 09, 2022
  CurationGeneGenerator, CurationAGMGenerator -- added

May 02, 2022
  CurationDafGenerator -- added 'internal' field to comply with new schema

Mar 28, 2022
  CurationDafGenerator -- suppressed export of WITH info field

Mar 18, 2022
  CurationDafGenerator -- note_type fixed to be 'disease_note' instead of 'comment'
  CurationDafGenerator -- added generation of disease_agm_ingest_set and disease_allele_ingest_set
  
Mar 17, 2022
  CurationDafGenerator -- added annotations with OMIM:PS mappings

Mar 16, 2022
  added CurationDafGenerator -- generates daf file for HUMAN, gene-disease annotations

Feb 16, 2022
  added module VariantVcfGenerator, to produce VCF file with high throughput variants for rn7 assembly in VCF format