@@ -26,9 +26,9 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
-    compile 'org.springframework:spring-beans:5.3.12'
-    compile 'org.springframework:spring-jdbc:5.3.12'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.6.0.0'
+    compile 'org.springframework:spring-beans:5.3.13'
+    compile 'org.springframework:spring-jdbc:5.3.13'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
